feat: обернул проект в docker и поменял БД

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ packaging==23.0
 pathspec==0.11.0
 platformdirs==3.0.0
 pluggy==1.0.0
+psycopg2-binary==2.9.5
 pytest==7.2.1
 pytest-django==4.5.2
 python-dateutil==2.8.2
