--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ djangorestframework==3.14.0
 exceptiongroup==1.1.0
 factory-boy==3.2.1
 Faker==16.6.1
+gunicorn==20.1.0
 iniconfig==2.0.0
 mypy-extensions==1.0.0
 packaging==23.0
