--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,6 +2,15 @@ version: '3.9'
 
 services:
 
+  nginx:
+    build: ./nginx
+    ports:
+      - "80:80"
+      - "8000:80"
+#      - "443:443"
+    depends_on:
+      - backend
+
   backend:
     build:
       context: .
@@ -9,8 +18,6 @@ services:
     command: gunicorn great_app.wsgi:application --bind 0.0.0.0:8000
     volumes:
       - .:/app
-    ports:
-      - "8000:8000"
     environment:
       - POSTGRES_NAME=postgres
       - POSTGRES_USER=postgres
@@ -19,7 +26,6 @@ services:
     tty: true # for ipdb
     depends_on:
       - db
-
 
   db:
     image: postgres:13.3-alpine
