feat: добавил entrypoint.sh и entrypoint.prod.sh

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -17,6 +17,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    entrypoint: ./entrypoint.prod.sh
     command: gunicorn great_app.wsgi:application --bind 0.0.0.0:8000
     volumes:
       - static:/app/static
