--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    entrypoint: ./entrypoint.sh
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/app
