--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -25,3 +25,15 @@ jobs:
             docker compose -f docker-compose.yml build
             docker compose -f docker-compose.yml up -d
             docker compose exec backend pytest
+
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+    - name: deploy
+      uses: appleboy/ssh-action@v0.1.7
+      with:
+        host: ${{ secrets.SSH_HOST }}
+        username: ${{ secrets.SSH_USERNAME }}
+        password: ${{ secrets.SSH_PASSWORD }}
+        script: whoami
+        run: python3 --version
